--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -58,32 +58,25 @@
 
             A collapse example here: -->
             <div id="exam" class="collapse">
-                Click to expand elements within the collapse div
-            </div>
-
-            
+                {% comment %} Click to expand elements within the collapse div {% endcomment %}           
 
             <!-- <HINT> If user is authenticated, show course exam with a list of question -->
             {% if user.is_authenticated %}
-            
                 <!-- <HINT> Each example will have many questions -->
-
                 <!-- <HINT> Each question will have many choices -->
-
-
                 <!-- <HINT> Create a form to collect the selected choices for all questions -->
                 <!-- <HINT> For each question choice, you may create a checkbox input like -->
                 <!-- <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}"> -->
-                
-
                 <!-- A choice submission form example -->
-                <form id="questionform" action="point to a submit view" method="post">
-                            <!-- ... for each question in the course ... -->
-                            <div class="card mt-1">
-                                <div class="card-header"><h5>{{ question.question_text}}</h5></div>
-                                {% csrf_token %}
-                                <div class="form-group">
-                                <!-- ... for each choice in the question ... -->
+                <form id="questionform" action="{%url 'onlinecourse:submit' course_id%}" method="post">
+                    <!-- ... for each question in the course ... -->
+                    {% for question in course.question_set.all %}
+                        <div class="card mt-1">
+                            <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+                            {% csrf_token %}
+                            <div class="form-group">
+                            <!-- ... for each choice in the question ... -->
+                                {% for choice in choice.question_set.all %}
                                     <div class="form-check">
                                         <label class="form-check-label">
                                             <input type="checkbox" name="choice_{{choice.id}}"
@@ -91,11 +84,14 @@
                                                 value="{{choice.id}}">{{ choice.choice_text }}
                                         </label>
                                     </div>
-                                </div>
+                                {%endfor%}
                             </div>
-                        <input class="btn btn-success btn-block" type="submit" value="Submit">
+                        </div>
+                    {% endfor %}
+                    <input class="btn btn-success btn-block" type="submit" value="Submit">
                 </form>
             {% endif %}
+        </div>
             <!--Check here to see more details Bootstrap checkbox
              https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
     </div>
